# research-papers-summary-rag

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
data/extracted-text/: 82_2020_217.txt  Efficacy and Safety of the mRNA-1273 SARS-CoV-2 Vaccine.txt  Emerging Frontiers in Drug Delivery.txt  PMC8198544.txt  PMC8325057.txt  Safety and Efficacy of the BNT162b2 mRNA Covid-19 Vaccine.txt  biomedicines-11-00308-v2.txt  mRNA vaccines — a new era.txt  nanomaterials-10-00364-v2.txt  pharmaceutics-12-00102-v2.txt  s41392-022-00950-y.txt  s41392-022-01007-w.txt  s41591-022-02061-1.txt
instadeep_technical_test/: evaluation.py  faiss_database.py  streamlit_app.py  summarize.py
instadeep_technical_test/api_key_management/: extract_api_from_config.py
instadeep_technical_test/cli/: evaluation.py  main.py
src/: evaluation.py  streamlit_app.py  summarize.py
src/api_key_management/: config.ini  extract_api_from_config.py
src/cli/: evaluation.py  main.py
tests/: test_faiss_database.py  test_summarize.py
