[tool.poetry]
name = "instadeep-technical-test"
version = "0.1.0"
description = ""
authors = ["rdonni <rayane.donni@imt-atlantique.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.18"
langchain = "^0.0.348"
async-timeout = "^4.0.3"
sentence-transformers = "^2.2.2"
faiss-cpu = "^1.7.4"
pypdf = "^3.17.1"
torch = "^2.1.1"
transformers = "^4.35.2"
accelerate = "^0.25.0"
ctransformers = "^0.2.27"
openai = "^1.3.7"
tiktoken = "^0.5.2"
streamlit = "^1.29.0"
ragas = "^0.0.21"
evaluate = "^0.4.1"
rouge-score = "^0.1.2"
watchdog = "^3.0.0"
markdown-tree = "^0.1.5"
coloredlogs = "^15.0.1"

[[tool.poetry.source]]
name = "auto_gptq_src"
url = "https://huggingface.github.io/autogptq-index/whl/cu118/"
priority = "explicit"


[tool.poetry.group.dev]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
black = "^23.11.0"
pre-commit = "^3.6"

[tool.ruff.isort]
section-order = [
    "future",
    "standard-library",
    "first-party",
    "third-party",
    "instadeep_technical_test",
    "local-folder",
]

[tool.ruff.isort.sections]
instadeep_technical_test = ["instadeep_technical_test"]


[tool.ruff]
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "UP",
    "YTT",
    "B",
    "C4",
    "DTZ",
    "T10",
    "ISC",
    "ICN",
    "G",
    "PIE",
    "PYI",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SIM",
    "INT",
    "ARG",
    "PD",
    "PGH",
]
exclude = [
    ".git",
    "data"
]
ignore = ["E501", "D106", "D101", "B028"]


[tool.poetry.plugins."poetry.application.plugin"]
deploy = "instadeep_technical_test.cli.main:main"



[tool.setuptools.package-data]
"*" = ["*.html"]

[tool.pytest.ini_options]
addopts = """\
    --color=yes \
    --cov=instadeep_technical_test \
    --junitxml=cov/pytest.xml \
    --cov-report=term \
    --cov-report=xml:cov/coverage.xml \
    --cov-report=html:cov/html \
"""


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
